# ontology

./: LICENSE  README.md  check.sh  pyproject.toml  pytest.ini  requirements.txt
ontology/: __init__.py  knowledge_graph.py  memory_server.py  models.py
tests/: test_knowledge_graph.py  test_memory_server.py  test_models.py
